--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    Coming soon
+    <div class="hero">
+        <div class="small-container">
+                HERO: blue + background photo
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="container">
+            <div class="left">
+                LEFT
+            </div>
+            <div>
+                RIGHT
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+                Footer: blue
+        </div>
+    </footer>
 </body>
 </html>
