--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     <div class="main-content">
         <div class="container">
             <div class="left">
-                LEFT
+                <h3>About startup</h3>
+                <p>Lorem ipsum dolor sit amet consectetur <a href="https://www.google.com" target="_blank">adipisicing</a> elit. Corporis non sunt earum nostrum eaque dolorem, consequuntur neque, eius illo sit officiis tempora facere voluptatibus facilis? Dignissimos cum molestiae vero nisi!</p>
             </div>
             <div class="right">
-                RIGHT
+                <h3>Have any questions?</h3>>
+                <p>Lorem ipsum dolor sit amet consectetur <a href="mailto:demo@gmail.com">demo@gmail.com</a> elit. Asperiores obcaecati alias expedita esse sed est. Necessitatibus voluptate voluptatibus quae minus itaque illo neque sed quo, eaque nisi quas aspernatur atque?</p>
             </div>
         </div>
     </div>
