--- a/index.html
+++ b/index.html
@@ -46,8 +46,15 @@
             <a href="#" target="_blank" class="fa fa-instagram"></a>
             <a href="#" target="_blank" class="fa fa-rss"></a>
         </div>
+        
         <div class="container">
-            LOGO+TEXT
+            <img src="./img/logo-white.png" alt="Logo">
+            <div class="info">
+                <div>Copyright &copy; 2016 <a href="#" target="_blank">Matrox</a></div>
+                <div>All Rights Reserved</div>
+                <div>Designed by <a href="#" target="_blank">Trendy Theme</a></div>        
+            </div>
+            <p>Lorem ipsum dolor sit amet </p>
         </div>
     </footer>
 </body>
