--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Coming soon</title>
     <link rel="Stylesheet" href="./css/font-awesome.min.css">
+    <link rel="Stylesheet" href="./css/progress-bar.css">
     <link rel="stylesheet" href="./css/style.css">
     
 </head>
@@ -29,6 +30,15 @@
             <div class="left">
                 <h3>About startup</h3>
                 <p>Lorem ipsum dolor sit amet consectetur <a href="https://www.google.com" target="_blank">adipisicing</a> elit. Corporis non sunt earum nostrum eaque dolorem, consequuntur neque, eius illo sit officiis tempora facere voluptatibus facilis? Dignissimos cum molestiae vero nisi!</p>
+                <div class="progress-bar">
+                    <div class="texts">
+                        <div class="title">UX Design</div>
+                        <div class="value">90%</div>
+                    </div>
+                    <div class="bar">
+                        <div class="Value"></div>
+                    </div>
+                </div>
             </div>
             <div class="right">
                 <h3>Have any questions?</h3>>
