Back to top elment #9

--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
                         <div class="Value"></div>
                     </div>
                 </div>
+                <div class="progress-bar">
+                    <div class="texts">
+                        <div class="title">WEB Design</div>
+                        <div class="value">86%</div>
+                    </div>
+                    <div class="bar">
+                        <div class="Value"></div>
+                    </div>
+                </div>
+                <div class="progress-bar">
+                    <div class="texts">
+                        <div class="title">WEB Development</div>
+                        <div class="value" style="width: 51%">
+                            <div class="loading"></div>
+                        </div>
+                    </div>
+                    <div class="bar">
+                        <div class="Value"></div>
+                    </div>
+                </div>
             </div>
             <div class="right">
                 <h3>Have any questions?</h3>>
@@ -55,6 +75,7 @@
             <a href="#" target="_blank" class="fa fa-linkedin"></a>
             <a href="#" target="_blank" class="fa fa-instagram"></a>
             <a href="#" target="_blank" class="fa fa-rss"></a>
+            <a href="#" class="fa fa-angle-up"></a>
         </div>
         
         <div class="container">
