--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Coming soon</title>
     <link rel="Stylesheet" href="./css/font-awesome.min.css">
+    <link rel="Stylesheet" href="./css/clock.css">
     <link rel="Stylesheet" href="./css/progress-bar.css">
     <link rel="stylesheet" href="./css/style.css">
     
@@ -17,7 +18,22 @@
                 <h1>Coming soon</h1>
                 <p>An awesome new company for web resources is coming very soon. Enter your email to request an erly invitation!</p>
                 <div class="clock">
-                    LAIKRODIS
+                    <div class="time">
+                        <div class="value">432</div>
+                        <div class="title">DAYS</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">09</div>
+                        <div class="title">HOURS</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">37</div>
+                        <div class="title">MINUTES</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">39</div>
+                        <div class="title">SECONDS</div>
+                    </div>title
                 </div>
                 <form>
                     SUBSCRIBE FORMA
