--- a/index.html
+++ b/index.html
@@ -5,80 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Coming soon</title>
-    <link rel="Stylesheet" href="./css/font-awesome.min.css">
-    <link rel="Stylesheet" href="./css/clock.css">
-    <link rel="Stylesheet" href="./css/progress-bar.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/clock.css">
+    <link rel="stylesheet" href="./css/mouse.css">
+    <link rel="stylesheet" href="./css/progress-bar.css">
     <link rel="stylesheet" href="./css/style.css">
-    
 </head>
 <body>
     <div class="hero">
         <div class="small-container">
-                <img src="./img/logo.png" alt="Logo">
-                <h1>Coming soon</h1>
-                <p>An awesome new company for web resources is coming very soon. Enter your email to request an erly invitation!</p>
-                <div class="clock">
-                    <div class="time">
-                        <div class="value">432</div>
-                        <div class="title">DAYS</div>
-                    </div>
-                    <div class="time">
-                        <div class="value">09</div>
-                        <div class="title">HOURS</div>
-                    </div>
-                    <div class="time">
-                        <div class="value">37</div>
-                        <div class="title">MINUTES</div>
-                    </div>
-                    <div class="time">
-                        <div class="value">39</div>
-                        <div class="title">SECONDS</div>
-                    </div>title
+            <img src="./img/logo.png" alt="Logo">
+            <h1>Coming soon</h1>
+            <p>An awesome new company for web resources is 
+                coming very soon. Enter your email to request 
+                an erly invitation!
+            </p>
+            <div class="clock">
+                <div class="time">
+                    <div class="value">432</div>
+                    <div class="title">DAYS</div>
                 </div>
-                <form>
-                    SUBSCRIBE FORMA
-                </form>
-                <div class="mouse">MOUSE</div>
+                <div class="time">
+                    <div class="value">09</div>
+                    <div class="title">HOURS</div>
+                </div>
+                <div class="time">
+                    <div class="value">37</div>
+                    <div class="title">MINUTES</div>
+                </div>
+                <div class="time">
+                    <div class="value">39</div>
+                    <div class="title">SECONDS</div>
+                </div>
+            </div>
+            <form>
+                SUBSCRIBE FORMA
+            </form>
+            <div class="mouse">
+                <div class="wheel"></div>
+            </div>
         </div>
     </div>
     <div class="main-content">
         <div class="container">
             <div class="left">
                 <h3>About startup</h3>
-                <p>Lorem ipsum dolor sit amet consectetur <a href="https://www.google.com" target="_blank">adipisicing</a> elit. Corporis non sunt earum nostrum eaque dolorem, consequuntur neque, eius illo sit officiis tempora facere voluptatibus facilis? Dignissimos cum molestiae vero nisi!</p>
+                <p>Lorem ipsum dolor sit amet consectetur 
+                    <a href="https://www.google.com" target="_blank">adipisicing</a> 
+                    elit. Corporis non sunt earum nostrum eaque dolorem, consequuntur 
+                    neque, eius illo sit officiis tempora facere voluptatibus facilis? 
+                    issimos cum molestiae vero nisi!
+                </p>
                 <div class="progress-bar">
                     <div class="texts">
                         <div class="title">UX Design</div>
                         <div class="value">90%</div>
                     </div>
                     <div class="bar">
-                        <div class="Value"></div>
+                        <div class="value" style="width: 90%;">
+                            <div class="loading"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="progress-bar">
                     <div class="texts">
                         <div class="title">WEB Design</div>
-                        <div class="value">86%</div>
+                        <div class="value">4%</div>
                     </div>
                     <div class="bar">
-                        <div class="Value"></div>
+                        <div class="Value" style="width: 4%;">
+                            <div class="loading"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="progress-bar">
                     <div class="texts">
                         <div class="title">WEB Development</div>
-                        <div class="value" style="width: 51%">
-                            <div class="loading"></div>
-                        </div>
+                        <div class="value">51%</div>
                     </div>
                     <div class="bar">
-                        <div class="Value"></div>
+                        <div class="Value" style="width 51%;">
+                            <div class="loading"></div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="right">
-                <h3>Have any questions?</h3>>
-                <p>Lorem ipsum dolor sit amet consectetur <a href="mailto:demo@gmail.com">demo@gmail.com</a> elit. Asperiores obcaecati alias expedita esse sed est. Necessitatibus voluptate voluptatibus quae minus itaque illo neque sed quo, eaque nisi quas aspernatur atque?</p>
+                <h3>Have any questions?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur 
+                    <a href="mailto:demo@gmail.com">demo@gmail.com</a> elit. 
+                    Asperiores obcaecati alias expedita esse sed est. 
+                    Necessitatibus voluptate voluptatibus quae minus itaque
+                     illo neque sed quo, eaque nisi quas aspernatur atque?
+                </p>
             </div>
         </div>
     </div>
@@ -93,7 +112,6 @@
             <a href="#" target="_blank" class="fa fa-rss"></a>
             <a href="#" class="fa fa-angle-up"></a>
         </div>
-        
         <div class="container">
             <img src="./img/logo-white.png" alt="Logo">
             <div class="info">
@@ -101,7 +119,10 @@
                 <div>All Rights Reserved</div>
                 <div>Designed by <a href="#" target="_blank">Trendy Theme</a></div>        
             </div>
-            <p>Lorem ipsum dolor sit amet </p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt,
+                harum totam velit dicta libero aspernatur corrupti iste facilis dolorem
+                ab dolores.
+            </p>
         </div>
     </footer>
 </body>
