Send message form #8

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Coming soon</title>
     <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/clock.css">
+    <link rel="stylesheet" href="./css/button.css">
     <link rel="stylesheet" href="./css/mouse.css">
     <link rel="stylesheet" href="./css/progress-bar.css">
+    <link rel="stylesheet" href="./css/form.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -18,7 +20,7 @@
             <h1>Coming soon</h1>
             <p>An awesome new company for web resources is 
                 coming very soon. Enter your email to request 
-                an erly invitation!
+                an early invitation!
             </p>
             <div class="clock">
                 <div class="time">
@@ -73,7 +75,7 @@
                         <div class="value">4%</div>
                     </div>
                     <div class="bar">
-                        <div class="Value" style="width: 4%;">
+                        <div class="value" style="width: 4%;">
                             <div class="loading"></div>
                         </div>
                     </div>
@@ -84,7 +86,7 @@
                         <div class="value">51%</div>
                     </div>
                     <div class="bar">
-                        <div class="Value" style="width 51%;">
+                        <div class="value" style="width: 51%;">
                             <div class="loading"></div>
                         </div>
                     </div>
@@ -98,6 +100,12 @@
                     Necessitatibus voluptate voluptatibus quae minus itaque
                      illo neque sed quo, eaque nisi quas aspernatur atque?
                 </p>
+                <form>
+                    <input name="name" type="text" placeholder="Name">
+                    <input name="email" type="email" placeholder="Email" value="">
+                    <textarea name="message" placeholder="Message"></textarea>
+                    <div class="btn" style="float: right;">Send message</div>
+                </form>
             </div>
         </div>
     </div>
